[package]
name = "cryptonight"
version = "0.1.0"
authors = ["calidion@gmail.com", "Michael Bohn <spaceodyssey@gmx.de>"]

[dependencies]
groestl = "0.8.0"
blake = "2.0.0"
jh-ffi = "0.5.0"
skein-ffi = "0.5.0"
log = "0.4.6"
byteorder = "1.2.7"
tiny-keccak = "1.4.2"

[badges]
travis-ci = { repository = "cryptonote-rust/cryptonight", branch = "master" }
codecov = { repository = "cryptonote-rust/cryptonight", branch = "master", service = "github" }

